# mdpax

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish_to_test_pypi.yml  tests.yml
docs/source/: api.rst  conf.py
docs/source/notebooks/: create_custom_problem.ipynb  getting_started.ipynb
examples/: create_custom_problem.ipynb  getting_started.ipynb
paper/: paper.bib  paper.md
src/mdpax/: types.py
src/mdpax/core/: problem.py  solver.py
src/mdpax/mdptoolbox/: __init__.py  example.py  mdp.py
src/mdpax/problems/: de_moor_perishable.py  forest.py  hendrix_perishable_substitution_two_product.py  mirjalili_perishable_platelet.py  rand.py
src/mdpax/problems/perishable_inventory/: de_moor_single_product.py  hendrix_two_product.py  mirjalili_platelet.py
src/mdpax/solvers/: periodic_value_iteration.py  policy_iteration.py  relative_value_iteration.py  semi_async_value_iteration.py  value_iteration.py
src/mdpax/temp/: mirjalili.py  value_iteration.py
src/mdpax/utils/: batch_processing.py  checkpointing.py  logging.py  spaces.py  types.py
tests/: test_de_moor_vir.py  test_example.py  test_forest.py  test_hendrix_vir.py  test_mirjalili.py  test_rand.py  test_value_iteration.py  test_vi_runner.py
tests/problems/: test_forest.py  test_hendrix.py
tests/solvers/: test_relative_value_iteration.py
tests/test_problems/: test_de_moor.py  test_hendrix.py  test_mirjalili.py
tests/test_problems/test_perishable_inventory/: test_de_moor_single_product.py  test_hendrix_two_product.py  test_mirjalili_platelet.py
tests/test_solvers/: test_periodic_value_iteration.py  test_relative_value_iteration.py  test_value_iteration.py
tests/test_solvers/data/: de_moor_perishable_m3_exp5_visojax.csv  hendrix_m2_exp1_visojax.csv
tests/test_utils/: test_checkpointing.py  test_spaces.py
tests/utils/: test_checkpointing.py  test_spaces.py
