[project]
name = "mdpax"
version = "0.0.1"
description = "GPU-accelerated MDP solvers in Python with JAX"
authors = [{name = "Joe Farrington", email = "farrington.joe@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jax[cuda12]>=0.4.30",
    "pandas>=2.2.3",
    "chex>=0.1.88",
    "numpyro>=0.16.1",
    "orbax>=0.1.9",
    "loguru>=0.7.3",
    "hydra-core>=1.3.2",
    "jaxtyping>=0.2.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pymdptoolbox>=4.0b3",
    "jupyter>=1.1.1",
    "black>=24.10.0",
    "ruff>=0.8.3",
    "pytest>=8.3.4",
    "ipython>=8.18.1",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "pytest-datadir>=1.5.0",
    "pre-commit>=4.0.1",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
fix = true
ignore = [
    "E501",
    "F722",
    "F821",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
